--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "dotenv": "^6.0.0",
     "firebase": "^5.3.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
