--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "classnames": "^2.2.6",
     "dotenv": "^6.0.0",
     "firebase": "^5.3.1",
+    "firebase-functions": "^2.0.5",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
