--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux-firebase": "^2.1.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "reactstrap": "^7.0.2",
     "redux": "^4.0.0",
     "redux-auth-wrapper": "^2.0.3",
     "redux-devtools-extension": "^2.13.5",
